--- a/index.html
+++ b/index.html
@@ -3,60 +3,196 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>unit4-ai-assignment — Bubble Sort</title>
+  <title>Bubble Sort — unit4-ai-assignment</title>
   <style>
-    :root {
-      --bg: #e6f7ff; /* light blue */
-      --card: #ffffff;
-      --muted: #555;
-      --accent: #0077b6;
-      --radius: 10px;
-      --maxw: 900px;
-      --code-bg: #f4f8fb;
+    :root{
+      --bg: #e6f7ff;
+      --card:#ffffff;
+      --muted:#274156;
+      --accent:#0077b6;
+      --radius:10px;
+      --maxw:1100px;
+      --code-bg:#f4fbff;
     }
-    html, body {
-      height: 100%;
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: linear-gradient(180deg, var(--bg), #f0fbff);
-      color: #0b2336;
-    }
-    .wrap {
-      max-width: var(--maxw);
-      margin: 36px auto;
-      padding: 28px;
-      background: rgba(255,255,255,0.85);
-      border-radius: var(--radius);
-      box-shadow: 0 8px 30px rgba(3, 34, 45, 0.08);
-    }
-    h1 {
-      margin: 0 0 8px 0;
-      color: var(--accent);
-      font-size: 1.9rem;
-      display:flex;
-      align-items:center;
-      gap:12px;
-    }
-    p.lead {
-      margin-top: 0;
-      color: var(--muted);
-    }
-    .section {
-      margin: 18px 0;
-    }
-    .cards {
-      display: grid;
-      gap: 12px;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    }
-    .card {
-      background: var(--card);
-      border-radius: 8px;
-      padding: 12px 14px;
-      border: 1px solid rgba(3,34,45,0.06);
-    }
-    pre.code {
-      background: var(--code-bg);
-      padding: 12px;
-      border-radius: 6px;
-      overflow-x: auto;
+    html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;}
+    body{background:linear-gradient(180deg,var(--bg),#f3fbff);color:#083047;}
+    .container{max-width:var(--maxw);margin:36px auto;padding:28px;background:rgba(255,255,255,0.9);border-radius:var(--radius);box-shadow:0 10px 30px rgba(3,34,45,0.06);}
+    h1{color:var(--accent);margin:0 0 8px;font-size:1.8rem;display:flex;gap:10px;align-items:center}
+    p.lead{margin-top:0;color:var(--muted)}
+    section{margin:18px 0}
+    .card{background:var(--card);padding:14px;border-radius:8px;border:1px solid rgba(3,34,45,0.06)}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:12px}
+    pre.code{background:var(--code-bg);padding:12px;border-radius:8px;overflow:auto;font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono", monospace;font-size:0.9rem}
+    a{color:var(--accent)}
+    footer{margin-top:18px;color:var(--muted);font-size:0.9rem}
+    .muted{color:var(--muted)}
+  </style>
+</head>
+<body>
+  <main class="container" role="main" aria-labelledby="title">
+    <h1 id="title">🧮 Bubble Sort — unit4-ai-assignment</h1>
+    <p class="lead">An educational Python implementation of Bubble Sort with a tiny CLI. This page explains the project, shows the code, and demonstrates how to run it locally.</p>
+
+    <section>
+      <h2>Overview</h2>
+      <div class="card">
+        <p>This repository provides a compact, well-documented bubble sort implementation in Python (bubble_sort.py). It's intended for learning and small experiments rather than production use.</p>
+        <p>Repository: <a href="https://github.com/riya-pesu/unit4-ai-assignment" target="_blank" rel="noopener noreferrer">github.com/riya-pesu/unit4-ai-assignment</a></p>
+      </div>
+    </section>
+
+    <section>
+      <h2>Real World Applications of Bubble Sort</h2>
+      <div class="grid">
+        <div class="card">
+          <strong>Education & Demonstration</strong>
+          <p class="muted">Bubble sort is simple and easy to understand, making it ideal for teaching basic sorting concepts, algorithm tracing, and demonstrating algorithmic complexity.</p>
+        </div>
+        <div class="card">
+          <strong>Small, Nearly-Sorted Lists</strong>
+          <p class="muted">For very small or nearly-sorted lists, bubble sort can be acceptable and can exit early when no swaps occur.</p>
+        </div>
+        <div class="card">
+          <strong>Embedded / Constrained Environments</strong>
+          <p class="muted">In very constrained systems where code simplicity and predictable behavior are more important than raw speed, bubble sort's small code size can be helpful.</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h2>Code Explanation</h2>
+      <div class="card">
+        <p>The following is the bubble_sort.py implementation used in this project. It includes a small CLI, a parser for numeric tokens, and clear error messages when elements cannot be compared.</p>
+        <pre class="code"><code>```python
+#!/usr/bin/env python3
+"""
+bubble_sort.py
+
+Concise, readable bubble sort with minimal surface area:
+- bubble_sort(sequence, reverse=False, in_place=False)
+- bubble_sort_in_place(list, reverse=False)
+- small CLI for quick use
+
+Preserves helpful TypeError messages for non-iterable inputs and
+non-comparable elements while keeping the implementation compact.
+"""
+from typing import Iterable, List, Any
+import argparse
+import sys
+
+__all__ = ["bubble_sort", "bubble_sort_in_place"]
+
+
+def _parse_token(tok: str) -> Any:
+    t = tok.strip()
+    for conv in (int, float):
+        try:
+            return conv(t)
+        except Exception:
+            continue
+    return t
+
+
+def bubble_sort_in_place(arr: List[Any], *, reverse: bool = False) -> List[Any]:
+    """In-place bubble sort. Returns the same list after sorting."""
+    if not isinstance(arr, list):
+        raise TypeError("bubble_sort_in_place requires a list for in-place sorting.")
+    n = len(arr)
+    for end in range(n - 1, 0, -1):
+        swapped = False
+        for i in range(end):
+            try:
+                if (arr[i] > arr[i + 1]) ^ reverse:
+                    arr[i], arr[i + 1] = arr[i + 1], arr[i]
+                    swapped = True
+            except TypeError as exc:
+                raise TypeError(f"Cannot compare {arr[i]!r} and {arr[i+1]!r}") from exc
+        if not swapped:
+            break
+    return arr
+
+
+def bubble_sort(sequence: Iterable[Any], *, reverse: bool = False, in_place: bool = False) -> List[Any]:
+    """
+    Sort sequence using bubble sort.
+    - If in_place=True, sequence must be a list and will be mutated and returned.
+    - Otherwise a new sorted list is returned.
+    """
+    if not hasattr(sequence, "__iter__"):
+        raise TypeError("sequence must be iterable")
+    if in_place:
+        return bubble_sort_in_place(sequence, reverse=reverse)  # type: ignore[arg-type]
+    return bubble_sort_in_place(list(sequence), reverse=reverse)
+
+
+def _cli(argv: List[str]) -> int:
+    p = argparse.ArgumentParser(description="Bubble sort (concise).")
+    p.add_argument("items", nargs="*", help="Items to sort (space separated).")
+    p.add_argument("-r", "--reverse", action="store_true", help="Sort descending.")
+    p.add_argument("-v", "--verbose", action="store_true", help="Show original + sorted.")
+    args = p.parse_args(argv)
+
+    if not args.items:
+        try:
+            raw = input("Enter items (comma separated): ").strip()
+        except (EOFError, KeyboardInterrupt):
+            return 1
+        if not raw:
+            return 1
+        tokens = [t for t in raw.split(",")]
+    else:
+        tokens = args.items
+
+    items = [_parse_token(t) for t in tokens]
+    try:
+        out = bubble_sort(items, reverse=args.reverse, in_place=False)
+    except TypeError as exc:
+        print(f"Error: {exc}", file=sys.stderr)
+        return 2
+
+    if args.verbose:
+        print("Original:", items)
+        print("Sorted:  ", out)
+    else:
+        print(" ".join(map(str, out)))
+    return 0
+
+
+if __name__ == "__main__":
+    raise SystemExit(_cli(sys.argv[1:]))
+```</code></pre>
+      </div>
+    </section>
+
+    <section>
+      <h2>Usage</h2>
+      <div class="card">
+        <p>Clone the repository and run the script from your shell:</p>
+        <pre class="code"><code>```bash
+# clone the repo
+git clone https://github.com/riya-pesu/unit4-ai-assignment.git
+cd unit4-ai-assignment
+
+# run with positional items
+python3 bubble_sort.py 5 1 4 3 2
+
+# run descending
+python3 bubble_sort.py --reverse 5 1 4 3 2
+
+# verbose output
+python3 bubble_sort.py -v 3 2 1
+
+# interactive (comma-separated prompt)
+python3 bubble_sort.py
+# then enter: 3, 1, 2
+```</code></pre>
+        <p class="muted">Tip: The script attempts to parse tokens as integers or floats automatically. If comparison fails (e.g., mixing incomparable types), a helpful error is printed.</p>
+      </div>
+    </section>
+
+    <footer>
+      <p>Made by <strong>riya-pesu</strong> • <a href="https://github.com/riya-pesu/unit4-ai-assignment" target="_blank" rel="noopener">github.com/riya-pesu/unit4-ai-assignment</a></p>
+    </footer>
+  </main>
+</body>
+</html>
